--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </section>
 
   <div class="footer">
-    <p>&copy; 2023 Sklep Internetowy</p>
+    <p>&copy; 2023 Serwis Internetowy</p>
   </div>
 
 </body>
